--- a/src/app/name-tag/name-tag.component.html
+++ b/src/app/name-tag/name-tag.component.html
@@ -3,8 +3,10 @@
     <h1 class="top-row">Hello</h1>
     <h2 class="bottom-row">my name is</h2>
   </div>
-  <p class="title">
-    {{ name }}
-  </p>
+  <div class="title">
+    <p>
+      {{ name }}
+    </p>
+  </div>
 </section>
 
