--- a/src/app/name-tag/name-tag.component.scss
+++ b/src/app/name-tag/name-tag.component.scss
@@ -1,5 +1,5 @@
 .sticker {
-    height: 200px;
+    height: 100%;
     width: 300px;
     box-shadow: 0px 0px 4px 1px #d3d3d3;
     border-radius: 8px;
@@ -30,6 +30,7 @@
         font-family: Courier;
         font-size: 36px;
         color: #333333;
+        text-overflow: ellipsis;
     }
 }
 
